[project]
name = "ai-persona-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "gradio>=6.19.0",
    "huggingface-hub>=1.21.0",
    "openai>=2.44.0",
    "pypdf>=6.14.2",
    "requests>=2.34.2",
]
